# Sistemas-Operativos

./: .gitignore  README.md
Clases prácticas/2/: ej2.c  po.c
Clases prácticas/5/: ej4b.txt
Clases prácticas/8/: apunte.txt
Guías/P0 - bash scritping y Makefile/: ej11.c  ej13.c
Guías/P0 - bash scritping y Makefile/Resuelto/: buscarInformacionUsuario  buscarInformacionUsuario,  cuit  ej12.c  ej12.txt  ej13.c  ej13.txt  plataformaCargaUsuarios  plataformaCargaUsuarios2
Guías/P0 - bash scritping y Makefile/taller0/: wordInverter.sh
Guías/P1 - procesos y API del SO/: ej11a  ej11a.c  ej2.txt  ej5.c  ej9.c
Guías/P1 - procesos y API del SO/Resuelto/: ej11b.c  ej18.c  ej8  ej8.c  ej9.c  (+2 more)
Guías/P3 - sincronización entre procesos/: ej11.c  ej12.c  ej13.c  ej14.c  ej15.c  ej16.c  ej17.c  ej18.c  ej19.c  ej8.c
Práctica/2/: ej2.c  simonzon.c
Práctica/5/: ej4.txt
Práctica/P0 - bash scritping y Makefile/: ej12.c  ej14.c
Práctica/P1 - procesos y API del SO/: ej16.c
Práctica/P3 - sincronización entre procesos/: ej13.c  ej15.c  ej16.c  ej17.c  ej18.c  ej19.c  ej8.c
Práctica/P4 - sistema de archivos/: ej6.excalidraw  ej8.excalidraw
Práctica/P5 - drivers/: ej7-a.c  ej7-b.c  ej8.c
TP Threading/codigo/: texto_largo.py
TP Threading/template-latex-tp/: solucion.tex
Talleres/Taller 1 - Syscalls y Señales/: ej1.c  numeromaldito
Talleres/Taller 3 - Threading/: ej1-a.cpp  ej1-d.cpp  ej2  ej2.cpp  ej3-a.cpp
Talleres/Taller 3 - Threading/Taller 3 - Threading resolución/: CMakeLists.txt  ej1-b.cpp  ej3  ej3-a.cpp  ej3-b.cpp  ej3-c.cpp  ej3-d.cpp
test/: t.c
(+35 files in other folders)
