cmake_minimum_required(VERSION 3.22)
project(clase_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(ej1-a ej1-a.cpp)
add_executable(ej1-b ej1-b.cpp)
add_executable(ej1-c ej1-c.cpp)
add_executable(ej1-d ej1-d.cpp)
add_executable(ej1-e ej1-e.cpp)

add_executable(ej2 ej2.cpp)
add_executable(ej2-alt ej2-alt.cpp)

add_executable(ej3-a ej3-a.cpp)
add_executable(ej3-b ej3-b.cpp)
add_executable(ej3-c ej3-c.cpp)
add_executable(ej3-d ej3-d.cpp)